data/derived/sp14/progs/unify/prog3057.ml.out
Characters 96-111:
  | h :: t  -> [mulByDigit x l2 + h/10; h mod 10] @ t
                ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
